Update jdk_update.md